feat: export metrics through OpenTelemetry
